--- a/AngularTeaching/src/app/templates/app.component.html
+++ b/AngularTeaching/src/app/templates/app.component.html
@@ -1,18 +1,13 @@
-<h1>
-    Найди все совпадения
-</h1>
+<p>
+  You can see 3 graph
+</p>
 
-<button (click)="openModal('custom-modal-1')">Open Modal 1</button>
+<div class="graphs">
 
-<modal id="custom-modal-1">
-    <div class="modal">
-        <div class="modal-body">
-            <h1>A Custom Modal!</h1>
-            <p>
-                Home page text: <input type="text" [(ngModel)]="bodyText" />
-            </p>
-            <button (click)="closeModal('custom-modal-1');">Close</button>
-        </div>
-    </div>
-    <div class="modal-background"></div>
-</modal>
+    <app-linegraph></app-linegraph>
+
+    <app-bargraph></app-bargraph>
+
+    <app-circlegraph></app-circlegraph>
+
+</div>
